syntax = "proto3";

package auth;
option go_package = "github.com/clubo-app/clubben/protobuf/auth";

import "google/protobuf/empty.proto";

service AuthService {
  rpc RegisterUser (RegisterUserRequest) returns (LoginUserResponse) {};
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {};
  rpc GoogleLoginUser (GoogleLoginUserRequest) returns (LoginUserResponse) {};
  rpc AppleLoginUser (AppleLoginUserRequest) returns (LoginUserResponse) {};
  rpc VerifyEmail (VerifyEmailRequest) returns (Account) {};
  rpc ResendVerificationEmail (ResendVerificationEmailRequest) returns (google.protobuf.Empty) {};
  rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (TokenResponse) {};

  rpc GetAccount (GetAccountRequest) returns (Account) {};
  rpc UpdateAccount (UpdateAccountRequest) returns (Account) {};
  rpc DeleteAccount (DeleteAccountRequest) returns (google.protobuf.Empty) {};
  rpc EmailTaken (EmailTakenRequest) returns (EmailTakenResponse) {};
}

// Requests
message RegisterUserRequest {
  string email = 1;
  string password = 5;

  string google_token = 7;
  string apple_token = 8;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message GoogleLoginUserRequest {
  string token = 1;
}

message AppleLoginUserRequest {
  string token = 1;
}

message VerifyEmailRequest {
  string id = 1;
  string code = 2;
}

message ResendVerificationEmailRequest {
  string email = 1;
}

message RefreshAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccountRequest {
  string id = 1;
}

message UpdateAccountRequest {
  string id = 1;
  string email = 2;
  string password = 3;
}

message DeleteAccountRequest {
  string id = 1;
}

message EmailTakenRequest {
  string email = 1;
}

// Response
enum Type {
  UNKOWNTYPE = 0;
  USER = 1;
  COMPANY = 2;
  DEV = 3;
  ADMIN = 4;
}

enum Provider {
  UNKOWNPROVIDER = 0;
  GOOGLE = 1;
  FACEBOOK = 2;
  APPLE = 3;
}

message TokenResponse {
  string access_token = 1; 
  string refresh_token = 2;
}

message Account {
  string id = 1;
  string email = 2;
  bool email_verified = 3;
  string email_code = 4;
  Provider provider = 5;
  Type type = 6;
}

message LoginUserResponse {
  TokenResponse tokens = 1;
  Account account = 2;
}

message EmailTakenResponse {
  bool taken = 1;
}
